feat: Update React and dependencies for ESM imports
Updates React to version 19.0.0 and adjusts ESM import paths in index.html to align with the new React version. This ensures compatibility and leverages the latest React features.

Also, adds `overrides` for `recharts` in `package.json` to correctly resolve React dependencies when using `npm` or `yarn` in conjunction with the ESM setup.

--- a/package.json
+++ b/package.json
@@ -1,23 +1,17 @@
 {
   "name": "crypto-soft-ui-dashboard",
+  "version": "1.0.0",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
   "dependencies": {
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "lucide-react": "0.460.0",
     "recharts": "2.13.3"
   },
-  "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+  "overrides": {
+    "recharts": {
+      "react": "$react",
+      "react-dom": "$react-dom"
+    }
   }
 }
