--- a/package.json
+++ b/package.json
@@ -2,16 +2,27 @@
   "name": "crypto-soft-ui-dashboard",
   "version": "1.0.0",
   "private": true,
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "lucide-react": "0.460.0",
-    "recharts": "2.13.3"
+    "recharts": "2.13.3",
+    "vite": "^6.0.7",
+    "@vitejs/plugin-react": "^4.3.4",
+    "typescript": "^5.7.2"
   },
   "overrides": {
     "recharts": {
       "react": "$react",
       "react-dom": "$react-dom"
+    },
+    "lucide-react": {
+      "react": "$react"
     }
   }
 }
